--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ p{
     text-align: center;
     line-height: 1.8;
     font-size: 1.5em;
-    margin-bottom: 500px;
+    margin-bottom: 20px;
 
 }
 
@@ -133,6 +133,38 @@ p{
 html{
     scroll-behavior: smooth
 }
+
+
+.container_projects {
+
+    max-width: 1600px;
+    background-color: #ffffff;
+    padding-top: 48px;
+    padding-right: 24px;
+    padding-bottom: 48px;
+    padding-left: 24px;
+    height: 85%;
+    width: 90%;
+    margin: auto;
+    margin-top: 50px;
+    border-radius: 4px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    flex-direction: row;
+
+
+
+}
+
+.box1, .box2, .box3, .box4, .box5, .box6{
+
+    background-color: #dddddd;
+    height: 47%;
+    width: 30%;
+
+}
+
 
 
 
@@ -174,6 +206,16 @@ html{
 <label for="portfolio_page"></label></a>
 <h4>I'M LINDSAY,</h4>
 <p class="about_me">High school student at Spanish River with a deep interest in computer science and psychology. Check out my <a href="https://github.com/lindsayesterman">github</a>!</p>
+
+<div class="container_projects">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRTyl4KUS6W2VnCqS8seVl7Pcg7KDSo1ciyRiyUSI_uQPZewLwp&usqp=CAU"class="box1">
+    <div class="box2">2</div>
+    <div class="box3">3</div>
+    <div class="box4">4</div>
+    <div class="box5">5</div>
+    <div class="box6">6</div>
+</div>
+
 
 
 
