added dct image

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ html{
     padding-bottom: 48px;
     padding-left: 24px;
     height: 85%;
-    width: 90%;
+    width: 80%;
     margin: auto;
     margin-top: 50px;
     border-radius: 4px;
@@ -155,15 +155,17 @@ html{
 
 
 
+
 }
 
 .box1, .box2, .box3, .box4, .box5, .box6{
 
     background-color: #dddddd;
     height: 47%;
-    width: 30%;
+    width: 28%;
 
 }
+
 
 
 
@@ -205,11 +207,11 @@ html{
 <a id="portfolio_page">
 <label for="portfolio_page"></label></a>
 <h4>I'M LINDSAY,</h4>
-<p class="about_me">High school student at Spanish River with a deep interest in computer science and psychology. Check out my <a href="https://github.com/lindsayesterman">github</a>!</p>
+<p class="about_me">High school student at Spanish River with a deep interest in computer science and psychology. Check out my <a href="https://github.com/lindsayesterman"target="_blank">github</a>!</p>
 
 <div class="container_projects">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRTyl4KUS6W2VnCqS8seVl7Pcg7KDSo1ciyRiyUSI_uQPZewLwp&usqp=CAU"class="box1">
-    <div class="box2">2</div>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRTyl4KUS6W2VnCqS8seVl7Pcg7KDSo1ciyRiyUSI_uQPZewLwp&usqp=CAU"class="box1"></a>
+    <img type="image/png" src="img/logo-green-copy.jpg" class="box2">
     <div class="box3">3</div>
     <div class="box4">4</div>
     <div class="box5">5</div>
