--- a/index.html
+++ b/index.html
@@ -163,6 +163,13 @@ html{
 
 }
 
+
+.box1 img:hover{
+
+
+}
+
+
 /* MEDIA QUERY computer*/
 @media screen and (max-width:900px) and (min-width:450px) {
 .helloIntro > h2{
@@ -241,7 +248,7 @@ html{
 
 <div class="container_projects">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRTyl4KUS6W2VnCqS8seVl7Pcg7KDSo1ciyRiyUSI_uQPZewLwp&usqp=CAU"class="box1"></a>
-    <img type="image/png" src="img/logo-green-copy.jpg" class="box2">
+    <img type="image/png" src="img/dct-final-logo.png" class="box2">
     <div class="box3">3</div>
     <div class="box4">4</div>
     <div class="box5">5</div>
