box % to px + mq

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ p{
     margin-bottom: 20px;
     margin:10px;
 
+
 }
 
 .about_me > a{
@@ -142,8 +143,8 @@ html{
     background-color: #ffffff;
     height: 85%;
     width: 80%;
-    margin: auto;
     margin-top: 50px;
+    margin:auto;
     border-radius: 4px;
     display: flex;
     flex-wrap: wrap;
@@ -158,16 +159,11 @@ html{
 .box1, .box2, .box3, .box4, .box5, .box6{
 
     background-color: #dddddd;
-    height: 47%;
-    width: 28%;
+    height: 240px;
+    width: 300px;
 
 }
 
-
-.box1 img:hover{
-
-
-}
 
 
 /* MEDIA QUERY computer*/
@@ -188,8 +184,8 @@ html{
 
 .box1, .box2, .box3, .box4, .box5, .box6{
 
-    height: 37%;
-    width: 30%;
+    height: 200px;
+    width: 225px;
 
 }
 
@@ -199,8 +195,15 @@ html{
 @media screen and (max-width:449px) {
 .helloIntro > h2{
 
-    font-size: 2.5em;
+    font-size: 5.5em;
     left: 55%;
+
+}
+
+.box1, .box2, .box3, .box4, .box5, .box6{
+
+    height: 220px;
+    width: 225px;
 
 }
 
