--- a/index.html
+++ b/index.html
@@ -193,18 +193,44 @@ html{
 
 /* MEDIA QUERY phone*/
 @media screen and (max-width:449px) {
-.helloIntro > h2{
 
-    font-size: 5.5em;
-    left: 55%;
-
+.helloIntro > h2 {
+    font-size: 8em;
+    top: 40%;
+    left: 40%;
 }
 
-.box1, .box2, .box3, .box4, .box5, .box6{
+.container_intro {
+    top: 55%;
+    width: 280px;
+    height: 80px;
+    left: 43%;
+}
 
-    height: 220px;
-    width: 225px;
+.portfolio, .github {
+    font-size: 30px;
+}
 
+
+.box1, .box2, .box3, .box4, .box5, .box6 {
+    height: 440px;
+    width: 500px;
+}
+
+.container_projects {
+    height: 3000px;
+    width: 100%;
+}
+
+
+
+.triangle-down {
+    border-left: 30px solid transparent;
+    border-right: 30px solid transparent;
+    border-top: 50px solid #555;
+    position: relative;
+    top: 900%;
+    left: -25%;
 }
 
 }
