--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
 
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
 
 <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
@@ -113,8 +117,10 @@ p{
     text-align: center;
     line-height: 1.8;
     font-size: 1.5em;
-    margin-bottom: 20px;
     margin:10px;
+    margin-bottom: 30px;
+
+
 
 
 }
@@ -235,8 +241,10 @@ html{
 
 }
 
-
 </style>
+
+<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+<script type="text/javascript" src="css3-mediaqueries.js"></script>
 
 
 <title>Lindsay Esterman</title>
