--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ html{
 
 .container_projects{
     
-    height: 100%;
+    height: 1300px;
     width: 100%;
 
 }
@@ -199,6 +199,15 @@ html{
 
 /* MEDIA QUERY phone*/
 @media screen and (max-width:449px) {
+
+.helloIntro > h2{
+
+    font-size: 2.1em;
+    left: 59.5%;
+
+}
+
+}
 
 
 </style>
