--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ html{
 
 .container_projects{
     
-    height: 1300px;
+    height: 700px;
     width: 100%;
 
 }
@@ -207,6 +207,12 @@ html{
 
 }
 
+.container_projects{
+    
+    height: 1300px;
+    width: 100%;
+
+}
 }
 
 
