--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     margin-left: -100px;
 }
 
-.container_intro {
+.container-intro {
 
 	position: absolute;
     z-index: 10;
@@ -78,7 +78,7 @@ body{
     background: #eaf1f8;
 }
 
-.container_intro a:hover {
+.container-intro a:hover {
 
     color: #383838; 
     text-decoration: : none; 
@@ -143,7 +143,7 @@ html{
 }
 
 
-.container_projects {
+.container-projects {
 
     max-width: 1600px;
     background-color: #ffffff;
@@ -278,7 +278,7 @@ html{
 
 }
 
-.container_projects{
+.container-projects{
     
     height: 700px;
     width: 100%;
@@ -305,7 +305,7 @@ html{
 
 }
 
-.container_projects{
+.container-projects{
     
     height: 1300px;
     width: 100%;
@@ -343,7 +343,7 @@ html{
 <div class="helloIntro">
     <h2>HELLO</h2>
 </div>
-<div class = "container_intro">
+<div class = "container-intro">
     <a class="github" href="https://github.com/lindsayesterman"target="_blank">GITHUB</a>
     <a class="portfolio" href="#portfolio_page">PORTFOLIO</a>
     <a class="triangle-down" href="#portfolio_page"></a>
@@ -357,7 +357,7 @@ html{
 <h4>I'M LINDSAY,</h4>
 <p class="about_me">High school student at Spanish River with a deep interest in computer science and psychology. Check out my <a href="https://github.com/lindsayesterman"target="_blank">github</a>!</p>
 
-<div class="container_projects">
+<div class="container-projects">
 
 <div class="hbbl">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRTyl4KUS6W2VnCqS8seVl7Pcg7KDSo1ciyRiyUSI_uQPZewLwp&usqp=CAU" class="hbbl">
