--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <a id="portfolio_page">
 <label for="portfolio_page"></label></a>
 <h4>I'M LINDSAY,</h4>
-<p class="about_me">High school student at Spanish River with a deep interest in computer science and psychology. Check out my <a href="https://github.com/lindsayesterman"target="_blank">github</a>!</p>
+<p class="about_me">High school student at Spanish River with a deep interest in computer science and psychology. Certified full stack web developer. Check out my <a href="https://github.com/lindsayesterman"target="_blank">github</a>!</p>
 
 
 
