--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,21 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+
+<html lang="en">
+
 <head>
+    
     <title>NASA APOD Project</title>
-    <link rel="stylesheet" href="style.css">
+    
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
+
+<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+
+
+<link rel="stylesheet" type="text/css" href="style.css"> 
+
 </head>
 
 <body>
