added project page

--- a/projects.html
+++ b/projects.html
@@ -1,42 +1,67 @@
+
 <!DOCTYPE html>
 
 <html lang="en">
 
-<head>
-    
-    <title>NASA APOD Project</title>
-    
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+
+  	<title>Mini Projects</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="style.css" rel="stylesheet" type="text/css"/>
+
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 
 
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 
-<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <script src="css3-mediaqueries.js"></script>
 
+  </head>
 
-<link rel="stylesheet" type="text/css" href="style.css"> 
+  <body>
 
-</head>
+<div class="projects-iphone">
+<img src="img/apclasscomp.png" class="mini-proj" alt="apclasshelp website" >
 
-<body>
-    <div class="projects-iphone">
-<div class="center">
-        <img type="image/png" src="img/nasa-home.png">
-        <img type="image/png" src="img/nasa-chosen.png">
+<h1>AP Class Help</h1>
+<hr>
+  </div>
+<div class="projects-p">
+  <p>Website dedicated to helping students in AP classes learn and review material on their own. These are some of my the resources that have been most helpful to me and extra ones my friends recommended. Check out the site at <a class="projects-links" href="http://www.apclasshelp.com/apclasses.html" target="_blank">apclasshelp.com</a> <br> <br>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/ap-class-help" target="_blank">here</a>. <br><br></p><br>
+
 </div>
-        <h1>NASA APOD POSTCARDS</h1>
-        <hr>
-        <div class="projects-p">
-            <p>NASA APOD POSTCARDS provides a thoughtful and meaninful, yet quick present/thinking-of-you message. Type in the day of your anniversery, birthday, or any memorable day and a gorgeous picture of the stars or space will appear. Check out a few <a class="projects-links" href="https://lindsayesterman.github.io/nasa-apod/" target="_blank">Nasa apod</a> dates yourself. Stack: Nasa API<br>
-
-                <br>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/nasa-apod" target="_blank">here</a>. <br><br></p>
-
-                <br>
 
 
-            </div>
-        </div>
-</body>
+<div class="projects-iphone">
+<img src="img/dogcheck.png" class="mini-proj" alt="apclasshelp website" >
+
+<h1>Dog Checklist</h1>
+<hr>
+  </div>
+<div class="projects-p">
+  <p>The first website I ever created! I built this to help people when they get a new dog and are overwhelmed by what to do. There is a checklist so users can check off items as they finish them. Included are highly rated options of what is needed. Check out <a class="projects-links" href="http://www.dogchecklist.org/" target="_blank">dogchecklist.org</a> for yourself! <br> <br>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/dog-checklist" target="_blank">here</a>. <br><br></p><br>
+
+</div>
+
+
+  
+<div class="projects-iphone">
+<img src="img/stopgerry.png" class="mini-proj" alt="apclasshelp website" >
+
+<h1>Stop Gerrymandering</h1>
+<hr>
+  </div>
+<div class="projects-p">
+  <p>Website I created to encourage the ban of gerrymandering. Users can look up their local representative and send a pre-written (or reworked if they want) letter to the congress representative. Here is the <a class="projects-links" href="https://lindsayesterman.github.io/stopgerrymandering/" target="_blank">website</a>! <br> <br>And github repo <a class="projects-links" href="https://github.com/lindsayesterman/stopgerrymandering" target="_blank">here</a>. <br><br></p><br>
+
+</div>
+
+
+
+  </body>
 
 </html>
-
