nasa-apod additions and img resize

--- a/projects.html
+++ b/projects.html
@@ -76,13 +76,13 @@
 
   
 <div class="projects-iphone">
-<img src="img/stopgerry.png" class="mini-proj" alt="apclasshelp website" >
+<img src="img/stopmand.png" class="mini-proj" alt="apclasshelp website" >
 
 <h1>Stop Gerrymandering</h1>
 <hr>
   </div>
 <div class="projects-p">
-  <p>Website I created to encourage the ban of gerrymandering. Users can look up their local representative and send a pre-written (or reworked if they want) letter to the congress representative. Here is the <a class="projects-links" href="https://lindsayesterman.github.io/stopgerrymandering/" target="_blank">website</a>! <br> <br>And github repo <a class="projects-links" href="https://github.com/lindsayesterman/stopgerrymandering" target="_blank">here</a> (don't judge, I regret the readme file also).  <br><br></p><br>
+  <p>Website I created to encourage the ban of gerrymandering. Users can look up their local representative and send a pre-written (or reworked if they want) letter to the congress representative. The immorality of gerrymandering has been something I was passionate about ever since I learned about it. This was the second website I created and while learning CS I knew I wanted to use it to help solve problems like this. This is the <a class="projects-links" href="https://lindsayesterman.github.io/stopgerrymandering/" target="_blank">website</a>! <br> <br>And check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/stopgerrymandering" target="_blank">here</a>!  <br><br></p><br>
 
 </div>
 
