--- a/nasa.html
+++ b/nasa.html
@@ -6,24 +6,24 @@
     
     <title>NASA APOD Project</title>
     
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
 
-<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 
 
-<link rel="stylesheet" type="text/css" href="style.css"> 
+    <link rel="stylesheet" type="text/css" href="style.css"> 
 
 </head>
 
 <body>
     <div class="projects-iphone">
-<div class="center">
-        <img type="image/png" src="img/nasa-home.png">
-        <img type="image/png" src="img/nasa-chosen.png">
-</div>
+        <div class="nasa-flex">
+            <img type="image/png" src="img/nasa-home.png">
+            <img type="image/png" src="img/nasa-chosen.png">
+        </div>
         <h1>Nasa Digital Postcards</h1>
         <hr>
         <div class="projects-p">
@@ -40,7 +40,7 @@
 
             </div>
         </div>
-</body>
+    </body>
 
-</html>
+    </html>
 
