--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,8 @@
 
   <body>
 
+    <a href="index.html#left-off"><img class="back-btn" src="https://franklyn.xyz/assets/icons/left.svg"></a>
+
 <div class="projects-iphone">
 <img src="img/apclasscomp.png" class="mini-proj" alt="apclasshelp website" >
 
