--- a/dct.html
+++ b/dct.html
@@ -3,34 +3,32 @@
 
 <head>
 	
-  <title>Daily College Tip</title>
+	  <title>Daily College Tip</title>
 
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
-
-<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-
-
-<link rel="stylesheet" type="text/css" href="style.css"> 
-
-
+	<link rel="stylesheet" type="text/css" href="style.css"> 
 
 </head>
 
 <body>
-	<div class="projects-iphone">
-<img type="image/png" src="img/iphone-dct.png">
-<h1>Daily College Tip</h1>
-<hr>
-	</div>
-<div class="projects-p">
-	<p>Florida has a ratio of 485 students to 1 guidance counselor. I noticed students at my school were struggling to find valid information regarding college admissions tips. They had a hard time sourcing the tips and then making sure they were reliable. I developed a site called Daily College Tip that provides students looking for college counseling with daily, free, emailed college admissions tips. Users subscribe on <a class="projects-links" href="http://www.dailycollegetip.com/" target="_blank">dailycollegetip.com</a> and they then get tips sent straight to their inbox. Stack: Sendgrid, MailChimp<br> <br>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/college-tips" target="_blank">here</a>. <br><br>The project has 35 subscribers and has currently been receiving over 70% open rates. In Fall of 2020, I am going to be launching a more complex version to distribute to high school students.</p><br>
 
-	<img class="graph" type="image/png" src="img/florida-graph.png">
-</div>
+	<a href="index.html#left-off"><img class="back-btn" src="https://franklyn.xyz/assets/icons/left.svg"></a>
+
+
+	<div class="projects-iphone">
+		<img type="image/png" src="img/iphone-dct.png">
+		<h1>Daily College Tip</h1>
+		<hr>
+	</div>
+	<div class="projects-p">
+		<p>Florida has a ratio of 485 students to 1 guidance counselor. I noticed students at my school were struggling to find valid information regarding college admissions tips. They had a hard time sourcing the tips and then making sure they were reliable. I developed a site called Daily College Tip that provides students looking for college counseling with daily, free, emailed college admissions tips. Users subscribe on <a class="projects-links" href="http://www.dailycollegetip.com/" target="_blank">dailycollegetip.com</a> and they then get tips sent straight to their inbox. Stack: Sendgrid, MailChimp<br> <br>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/college-tips" target="_blank">here</a>. <br><br>The project has 35 subscribers and has currently been receiving over 70% open rates. In Fall of 2020, I am going to be launching a more complex version to distribute to high school students.</p><br>
+
+		<img class="graph" type="image/png" src="img/florida-graph.png">
+	</div>
 
 
 
