--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
     <script src="css3-mediaqueries.js"></script>
 
-
     <link rel="stylesheet" type="text/css" href="style.css"> 
 
 </head>
@@ -67,7 +66,10 @@
 
     <main>
 
+
+
         <h1>I'M LINDSAY,</h1>
+
         <p class="about_me">High school student at Spanish River with a deep interest in computer science and psychology. Certified full stack web developer. Check out my   
 
             <a href="https://github.com/lindsayesterman" target="_blank">github</a>!</p><br>
@@ -76,24 +78,26 @@
 
         </main>
 
+        <a id="left-off"></a>
+
 
         <!-- Contact Links -->
         <div class="about_me">
             <h3>Get in touch with me here:<br></h3>
 
             <ol>
-             <li><a href="https://www.linkedin.com/in/lindsay-esterman-7722551a2/" target="_blank">Linkedin</a></li>
+               <li><a href="https://www.linkedin.com/in/lindsay-esterman-7722551a2/" target="_blank">Linkedin</a></li>
 
-             <li><a href="https://github.com/lindsayesterman" target="_blank">Github</a></li>
+               <li><a href="https://github.com/lindsayesterman" target="_blank">Github</a></li>
 
-             <li><a href="mailto:lindsayesterman@gmail.com">Email</a></li>
+               <li><a href="mailto:lindsayesterman@gmail.com">Email</a></li>
 
-         </ol>
-     </div>
+           </ol>
+       </div>
 
-     <!-- Boxes for showing projects -->
+       <!-- Boxes for showing projects -->
 
-     <div class="container-projects">
+       <div class="container-projects">
 
 
         <div class="dct">
@@ -125,10 +129,10 @@
                 <footer>
                     <div class="le">
 
-                     @ Lindsay Esterman
+                       @ Lindsay Esterman
 
-                 </div>
-             </footer>
-         </body>
+                   </div>
+               </footer>
+           </body>
 
-         </html>
+           </html>
