--- a/dct.html
+++ b/dct.html
@@ -8,9 +8,17 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" type="text/css" href="style.css"> 
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+
+
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+
+    <script src="css3-mediaqueries.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="style.css">  
 
 </head>
 
