--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
 
   <body>
 
-    <a href="index.html#left-off"><img class="back-btn" src="https://franklyn.xyz/assets/icons/left.svg"></a>
+    <a href="index.html#left-off"><img class="back-btn" type="image/png" src="img/back-btn.png"></a>
 
 <div class="projects-iphone">
 <img src="img/apclasscomp.png" class="mini-proj" alt="apclasshelp website" >
