--- a/dct.html
+++ b/dct.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
 
 <head>
@@ -24,7 +25,7 @@
 
 <body>
 
-	<a href="index.html#left-off"><img class="back-btn" src="https://franklyn.xyz/assets/icons/left.svg"></a>
+	<a href="index.html#left-off"><img class="back-btn" type="image/png" src="img/back-btn.png"></a>
 
 
 	<div class="projects-iphone">
