--- a/index.html
+++ b/index.html
@@ -133,6 +133,31 @@
 
                    </div>
                </footer>
+
+
+               <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+  $("a").on('click', function(event) {
+
+    if (this.hash !== "") {
+      event.preventDefault();
+
+      var hash = this.hash;
+
+      
+      $('html, body').animate({
+        scrollTop: $(hash).offset().top
+      }, 450, function(){
+   
+     
+        window.location.hash = hash;
+      });
+    } 
+  });
+});
+</script>
+
            </body>
 
            </html>
