--- a/projects.html
+++ b/projects.html
@@ -24,14 +24,14 @@
 
   <body>
 
-    <a href="index.html#left-off"><img class="back-btn" type="image/png" src="img/back-btn.png"></a>
+    <a href="index.html#left-off"><img class="back-btn" type="image/png" src="img/back-btn.png" alt="back button"></a>
 
 <div class="projects-iphone">
 <img src="img/apclasscomp.png" class="mini-proj" alt="apclasshelp website" >
 
 <h1>AP Class Help</h1>
 <hr>
-  </div>
+
 <div class="projects-p">
   <p>Website dedicated to helping students in AP classes learn and review material on their own. These are some of the resources that have been most helpful to me and there are extra ones my friends recommended. Taking many APs can be overwhelming so a nice list to look back to when stuck on a topic can be really helpful. Check out the site at <a class="projects-links" href="http://www.apclasshelp.com/apclasses.html" target="_blank">apclasshelp.com</a> <br> <br>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/ap-class-help" target="_blank">here</a>. <br><br></p><br>
 
@@ -39,37 +39,31 @@
 
 
 
-<div class="projects-iphone">
 <img src="img/nationalpark.png" class="mini-proj" alt="apclasshelp website" >
 
 <h1>National Park Finder</h1>
 <hr>
-  </div>
 <div class="projects-p">
   <p>Enter a state abbreviation and a list of national parks in your area will appear! Helps folks plan a vacation or nice weekend. This website is the first time I used an API. Check out <a class="projects-links" href="https://lindsayesterman.github.io/national-park-finder/" target="_blank">National Park finder</a> to get a better idea of the site! <br> <br>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/national-park-finder" target="_blank">here</a>. <br><br></p><br>
 
 </div>
 
 
-<div class="projects-iphone">
 <img src="img/sciencequiz.png" class="mini-proj" alt="apclasshelp website" >
 
 <h1>Science Quiz</h1>
 <hr>
-  </div>
 <div class="projects-p">
-  <p>Mini science quiz website. First time using jQuery. Really just some learning experimentation. Clearly, not much user research done aha. You can check out the site <a class="projects-links" href="https://lindsayesterman.github.io/science-quiz/" target="_blank">here</a> to get a better idea! <br> <br>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/science-quiz" target="_blank">here</a>. <br><br></p><br>
+  <p>Mini science quiz website. First time using jQuery. Really just some learning experimentation. You can check out the site and test your science skills <a class="projects-links" href="https://lindsayesterman.github.io/science-quiz/" target="_blank">here</a>! <br> <br>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/science-quiz" target="_blank">here</a>. <br><br></p><br>
 
 </div>
 
 
 
-<div class="projects-iphone">
 <img src="img/dogcheck.png" class="mini-proj" alt="apclasshelp website" >
 
 <h1>Dog Checklist</h1>
 <hr>
-  </div>
 <div class="projects-p">
   <p>The first website I ever created! I built this to help people when they get a new dog and are overwhelmed by what to do. There is a checklist so users can check off items as they finish them. Also included highly rated options of what is recommended to new dog owners. Check out <a class="projects-links" href="http://www.dogchecklist.org/" target="_blank">dogchecklist.org</a>!<br> <br>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/dog-checklist" target="_blank">here</a>. <br><br></p><br>
 
@@ -77,18 +71,16 @@
 
 
   
-<div class="projects-iphone">
 <img src="img/stopmand.png" class="mini-proj" alt="apclasshelp website" >
 
 <h1>Stop Gerrymandering</h1>
 <hr>
-  </div>
 <div class="projects-p">
   <p>Website I created to encourage the ban of gerrymandering. Users can look up their local representative and send a pre-written (or reworked if they want) letter to the congress representative. The immorality of gerrymandering has been something I was passionate about ever since I learned about it. This was the second website I created and while learning CS I knew I wanted to use it to help solve problems like this. This is the <a class="projects-links" href="https://lindsayesterman.github.io/stopgerrymandering/" target="_blank">website</a>! <br> <br>And check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/stopgerrymandering" target="_blank">here</a>!  <br><br></p><br>
 
 </div>
 
-
+</div>
 
   </body>
 
