--- a/dct.html
+++ b/dct.html
@@ -33,11 +33,17 @@
 		<img type="image/png" src="img/iphone-dct.png">
 		<h1>Daily College Tip</h1>
 		<hr>
-	<div class="projects-p">
-		<p>Florida has a ratio of 485 students to 1 guidance counselor. I noticed students at my school were struggling to find valid information regarding college admissions tips. They had a hard time sourcing the tips and then making sure they were reliable. I developed a site called Daily College Tip that provides students looking for college counseling with daily, free, emailed college admissions tips. Users subscribe on <a class="projects-links" href="http://www.dailycollegetip.com/" target="_blank">dailycollegetip.com</a> and they then get tips sent straight to their inbox. Stack: Sendgrid, MailChimp<br> <br>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/college-tips" target="_blank">here</a>. <br><br>The project has 116 subscribers and has currently been receiving over 50% open rates. In Fall of 2020, I am going to be launching a more complex version to distribute to high school students.</p><br>
+		<div class="projects-p">
+
+			<p>Florida has a ratio of 485 students to 1 guidance counselor. I noticed students at my school were struggling to find valid information regarding college admissions tips. They had a hard time sourcing the tips and then making sure they were reliable. I developed a site called Daily College Tip that provides students looking for college counseling with daily, free, emailed college admissions tips. Users subscribe on <a class="projects-links" href="http://www.dailycollegetip.com/" target="_blank">dailycollegetip.com</a>and they then get tips sent straight to their inbox. Stack: Sendgrid, MailChimp</p><br><br>
+
+			<p>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/college-tips" target="_blank">here</a>.<br><br></p>
+
+			<p>The project has 116 subscribers and has currently been receiving over 50% open rates. In Fall of 2020, I am going to be launching a more complex version to distribute to high school students.</p><br>
+
+		</div>
 
 		<img class="graph" type="image/png" src="img/florida-graph.png">
-	</div>
 
 	</div>
 
@@ -45,3 +51,4 @@
 
 
 </html>
+
