--- a/dct.html
+++ b/dct.html
@@ -10,15 +10,12 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<meta charset="utf-8">
+
 
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
 
 	<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-
-
-	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
-
-	<script src="css3-mediaqueries.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="style.css">  
 
@@ -35,7 +32,7 @@
 		<hr>
 		<div class="projects-p">
 
-			<p>Florida has a ratio of 485 students to 1 guidance counselor. I noticed students at my school were struggling to find valid information regarding college admissions tips. They had a hard time sourcing the tips and then making sure they were reliable. I developed a site called Daily College Tip that provides students looking for college counseling with daily, free, emailed college admissions tips. Users subscribe on <a class="projects-links" href="http://www.dailycollegetip.com/" target="_blank">dailycollegetip.com</a>and they then get tips sent straight to their inbox. Stack: Sendgrid, MailChimp</p><br><br>
+			<p>Florida has a ratio of 485 students to 1 guidance counselor. I noticed students at my school were struggling to find valid information regarding college admissions tips. They had a hard time sourcing the tips and then making sure they were reliable. I developed a site called Daily College Tip that provides students looking for college counseling with daily, free, emailed college admissions tips. Users subscribe on <a class="projects-links" href="http://www.dailycollegetip.com/" target="_blank">dailycollegetip.com</a> and they then get tips sent straight to their inbox. Stack: Sendgrid, MailChimp</p><br><br>
 
 			<p>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/college-tips" target="_blank">here</a>.<br><br></p>
 
@@ -46,6 +43,7 @@
 		<img class="graph" type="image/png" src="img/florida-graph.png">
 
 	</div>
+
 
 </body>
 
