updated dct pic

--- a/dct.html
+++ b/dct.html
@@ -27,7 +27,7 @@
 
 
 	<div class="projects-iphone">
-		<img type="image/png" src="img/iphone-dct.png">
+		<img type="image/png" src="img/collegetip.png">
 		<h1>Daily College Tip</h1>
 		<hr>
 		<div class="projects-p">
