--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
 <hr>
 
 <div class="projects-p">
-  <p>Website dedicated to helping students in AP classes learn and review material on their own. These are some of the resources that have been most helpful to me and there are extra ones my friends recommended. Taking many APs can be overwhelming so a nice list to look back to when stuck on a topic can be really helpful. Check out the site at <a class="projects-links" href="http://www.apclasshelp.com/apclasses.html" target="_blank">apclasshelp.com</a> <br> <br>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/ap-class-help" target="_blank">here</a>. <br><br></p><br>
+  <p>Website dedicated to helping students in AP classes learn and review material on their own. These are some of the resources that have been most helpful to me and there are extra ones my friends recommended. Taking many APs can be overwhelming, so a nice list to look back to when stuck on a topic can be really helpful. Check out the site at <a class="projects-links" href="http://www.apclasshelp.com/apclasses.html" target="_blank">apclasshelp.com</a>.<br> <br>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/ap-class-help" target="_blank">here</a>. <br><br></p><br>
 
 </div>
 
@@ -54,7 +54,7 @@
 <h1>Science Quiz</h1>
 <hr>
 <div class="projects-p">
-  <p>Mini science quiz website. First time using jQuery. Really just some learning experimentation. You can check out the site and test your science skills <a class="projects-links" href="https://lindsayesterman.github.io/science-quiz/" target="_blank">here</a>! <br> <br>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/science-quiz" target="_blank">here</a>. <br><br></p><br>
+  <p>Mini science quiz site. First time using jQuery. Goal was learning and experimentation. You can check out the site and test your science skills <a class="projects-links" href="https://lindsayesterman.github.io/science-quiz/" target="_blank">here</a>! <br> <br>And check out the  <a class="projects-links" href="https://github.com/lindsayesterman/science-quiz" target="_blank">github repo </a>too! <br><br></p><br>
 
 </div>
 
@@ -65,7 +65,7 @@
 <h1>Dog Checklist</h1>
 <hr>
 <div class="projects-p">
-  <p>The first website I ever created! I built this to help people when they get a new dog and are overwhelmed by what to do. There is a checklist so users can check off items as they finish them. Also included highly rated options of what is recommended to new dog owners. Check out <a class="projects-links" href="http://www.dogchecklist.org/" target="_blank">dogchecklist.org</a>!<br> <br>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/dog-checklist" target="_blank">here</a>. <br><br></p><br>
+  <p>The first website I ever created! I built this to help people when they get a new dog and are overwhelmed by what to do. There is a checklist so users can check off items as they finish them. Also included are highly rated options of what is recommended. Check out <a class="projects-links" href="http://www.dogchecklist.org/" target="_blank">dogchecklist.org</a>!<br> <br>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/dog-checklist" target="_blank">here</a>. <br><br></p><br>
 
 </div>
 
@@ -76,7 +76,7 @@
 <h1>Stop Gerrymandering</h1>
 <hr>
 <div class="projects-p">
-  <p>Website I created to encourage the ban of gerrymandering. Users can look up their local representative and send a pre-written (or reworked if they want) letter to the congress representative. The immorality of gerrymandering has been something I was passionate about ever since I learned about it. This was the second website I created and while learning CS I knew I wanted to use it to help solve problems like this. This is the <a class="projects-links" href="https://lindsayesterman.github.io/stopgerrymandering/" target="_blank">website</a>! <br> <br>And check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/stopgerrymandering" target="_blank">here</a>!  <br><br></p><br>
+  <p>Website I created to encourage the ban of gerrymandering. Users can look up their local representative and send a pre-written (or reworked if they want) letter to the congress representative. The immorality of gerrymandering has been something I was passionate about ever since I learned about it. When starting web dev, I knew I wanted to use it to try and solve problems like this. Check out the <a class="projects-links" href="https://lindsayesterman.github.io/stopgerrymandering/" target="_blank">website</a>! <br> <br>And github repo <a class="projects-links" href="https://github.com/lindsayesterman/stopgerrymandering" target="_blank">here</a>!  <br><br></p><br>
 
 </div>
 
