teamn up and noteful

--- a/dct.html
+++ b/dct.html
@@ -36,7 +36,7 @@
 
 			<p>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/college-tips" target="_blank">here</a>.<br><br></p>
 
-			<p>The project has 132 subscribers and has currently been receiving over 50% open rates. In Fall of 2020, I am going to be launching a more complex version to distribute to high school students.</p><br>
+			<p>The project currently has 204 subscribers and has been receiving over 50% open rates. In Fall of 2020, I am going to be launching a more complex version to distribute to high school students.</p><br>
 
 		</div>
 
