take off live sites

--- a/team.html
+++ b/team.html
@@ -30,7 +30,7 @@
         <p>CS students often have a hard time finding partners. They want to do meaningful work with someone who has the same interests as them and complements their abilities, but it can be difficult to meet someone with these qualities organically. Team’n Up solves this problem. Team’n Up allows you to search for CS partners based on interests, skills, languages, location, etc. We help you filter through tons of coders to find the perfect teammate for you. </p><br><br>
         <p>Growing up in a suburb, knowing no one in the tech industry, finding like minded STEM students to work with has been hard. Having this site allows students like me to find a partner who they can learn from and solve important matters with. </p><br><br>
        <p>Team’n Up was a top 5 winner in the Helix Hacks Hackathon. Team'n Up won “Most Creative” out of 72 other projects. </p><br><br>
-        <p>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/teammate-finder" target="_blank">here</a> and the live website <a class="projects-links" href="https://github.com/lindsayesterman/teammate-finder" target="_blank">here</a>.<br><br></p>
+        <p>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/teammate-finder" target="_blank">here</a> <br><br> </p>
 
     </div>
 
