--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <h1>I'M LINDSAY,</h1>
 
-        <p class="about_me">High school student at Spanish River with a deep interest in computer science and psychology. Certified full stack web developer. Check out my   
+        <p class="about_me">Student with a deep interest in computer programming and artificial intelligence. Certified full stack web developer. Check out my   
 
             <a href="https://github.com/lindsayesterman" target="_blank">github</a>!</p><br>
 
