--- a/index.html
+++ b/index.html
@@ -108,11 +108,12 @@
             </div>
 
             <div class="dct">
-                <a href="team.html">
-                    <img src="img/hack.png" class="dct" alt="coding team">
-                    <div>Team'n Up</div></a>
+                <a href="shehacks.html">
+                    <img src="img/shcover.png" class="dct" alt="women programming">
+                    <div>She Hacks</div></a>
     
                 </div>
+
 
             <div class="nasa"> 
                 <a href="nasa.html">   
@@ -120,6 +121,13 @@
                     <div>Nasa Apod Digital Postcards</div></a>
 
                 </div>
+
+                <div class="dct">
+                    <a href="team.html">
+                        <img src="img/hack.png" class="dct" alt="coding team">
+                        <div>Team'n Up</div></a>
+        
+                    </div>
 
                 <div class="mini-projects">
                     <a href="projects.html">
