--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
             <h3>Get in touch with me here:<br></h3>
 
             <ol>
-               <li><a href="https://www.linkedin.com/in/lindsay-esterman-7722551a2/" target="_blank">Linkedin</a></li>
+                <li><a href="https://www.linkedin.com/in/lindsayesterman/" target="_blank"><img src="img/linkedin.png"></a></li>
 
-               <li><a href="https://github.com/lindsayesterman" target="_blank">Github</a></li>
+               <li><a href="https://github.com/lindsayesterman" target="_blank"><img src="img/gh-icon.png"></a></li>
 
-               <li><a href="mailto:lindsayesterman@gmail.com">Email</a></li>
+               <li><a href="mailto:lindsayesterman@gmail.com"><img style="height:16px; margin-bottom:2px;" src="img/email-icon.png"></a></li>
 
            </ol>
        </div>
