--- a/shehacks.html
+++ b/shehacks.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 
 <html lang="en">
 
 <head>
-	
+
 	  <title>She Hacks</title>
 
 
@@ -17,7 +16,7 @@
 
 	<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" type="text/css" href="style.css">  
+	<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
@@ -32,12 +31,17 @@
 		<hr>
 		<div class="projects-p">
 
-			<p>She Hacks is an organization dedicated to teaching women front end web development and providing a community of women in web dev online. Members involved ask questions, talk about industry, discover new programming tools, and get to know other amazing female coders through our Slack Channel. We provide weekly free lessons teaching the fundamentals of web development.
-<br><br>
+			<p>She Hacks is an organization dedicated to teaching women front end web development and providing a
+				community of women in web dev online. Members involved ask questions, talk about industry, discover new
+				programming tools, and get to know other amazing female coders through our Slack Channel. We provide
+				weekly free lessons teaching the fundamentals of web development.
+				<br><br>
 
-			<p>Learn more about our awesome community at                  <a class="projects-links" href="http://www.shehacks.us/" target="_blank">shehacks.us</a>.<br><br></p>
+			<p>Learn more about our awesome community at <a class="projects-links" href="http://www.shehacks.us/"
+					target="_blank">shehacks.us</a>.<br><br></p>
 
-			<p>She Hacks currently has 85 members communicating on Slack and roughly 45 members coming to weekly lessons.</p><br>
+			<p>She Hacks currently has 85 members communicating on Slack and roughly 45 members coming to weekly
+				lessons.</p><br>
 
 		</div><br><br>
 
