--- a/dct.html
+++ b/dct.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 
 <html lang="en">
 
 <head>
-	
-	  <title>Daily College Tip</title>
+
+	<title>Daily College Tip</title>
 
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +16,7 @@
 
 	<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" type="text/css" href="style.css">  
+	<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
@@ -32,11 +31,19 @@
 		<hr>
 		<div class="projects-p">
 
-			<p>Florida has a ratio of 485 students to 1 guidance counselor. I noticed students at my school were struggling to find valid information regarding college admissions tips. They had a hard time sourcing the tips and then making sure they were reliable. I developed a site called Daily College Tip that provides students looking for college counseling with daily, free, emailed college admissions tips. Users subscribe on <a class="projects-links" href="http://www.dailycollegetip.com/" target="_blank">dailycollegetip.com</a> and they then get tips sent straight to their inbox. Stack: Sendgrid, MailChimp.</p><br><br>
+			<p>Florida has a ratio of 485 students to 1 guidance counselor. I noticed students at my school were
+				struggling to find valid information regarding college admissions tips. They had a hard time sourcing
+				the tips and then making sure they were reliable. I developed a site called Daily College Tip that
+				provides students looking for college counseling with daily, free, emailed college admissions tips.
+				Users subscribe on <a class="projects-links" href="http://www.dailycollegetip.com/"
+					target="_blank">dailycollegetip.com</a> and they then get tips sent straight to their inbox. Stack:
+				Sendgrid, MailChimp.</p><br><br>
 
-			<p>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/college-tips" target="_blank">here</a>.<br><br></p>
+			<p>Check out the github repo <a class="projects-links"
+					href="https://github.com/lindsayesterman/college-tips" target="_blank">here</a>.<br><br></p>
 
-			<p>The project currently has 204 subscribers and has been receiving over 50% open rates. In Fall of 2020, I am going to be launching a more complex version to distribute to high school students.</p><br>
+			<p>The project currently has 204 subscribers and has been receiving over 50% open rates. In Fall of 2020, I
+				am going to be launching a more complex version to distribute to high school students.</p><br>
 
 		</div>
 
@@ -49,4 +56,3 @@
 
 
 </html>
-
