--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
         <div class="dct">
             <a href="scrtime-saver.html">
-                <img src="img/scrtime-phone-cover.png" class="dct" alt="daily college tip logo">
+                <img src="img/scrtimeSnap.png" class="dct" alt="daily college tip logo">
                 <div>Screentime Saver</div>
             </a>
 
