--- a/scrtime-saver.html
+++ b/scrtime-saver.html
@@ -26,7 +26,7 @@
 
 
     <div class="projects-iphone">
-        <img type="image/png" src="img/scrtime-phone.png">
+        <img type="image/png" style="width:340px; padding-top:50px" src="img/scrtime-phone-app.png">
         <h1>Screentime Saver</h1>
         <hr>
         <div class="projects-p">
