--- a/shehacks.html
+++ b/shehacks.html
@@ -26,7 +26,7 @@
 
 
 	<div class="projects-iphone">
-		<img type="image/png" src="img/shephone.png">
+		<img type="image/png" style="width:300px" src="img/shfinalphone.png">
 		<h1>She Hacks</h1>
 		<hr>
 		<div class="projects-p">
@@ -40,8 +40,7 @@
 			<p>Learn more about our awesome community at <a class="projects-links" href="http://www.shehacks.us/"
 					target="_blank">shehacks.us</a>.<br><br></p>
 
-			<p>She Hacks currently has 85 members communicating on Slack and roughly 45 members coming to weekly
-				lessons.</p><br>
+			<p>She Hacks currently has 102 members communicating on Slack.</p><br>
 
 		</div><br><br>
 
