--- a/index.html
+++ b/index.html
@@ -8,15 +8,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300&display=swap" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-
-
-    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
-
-    <script src="css3-mediaqueries.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -56,7 +50,7 @@
         <div class="scroll_down">
             <svg id="arrow" width="19px" height="19px" version="1.1" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink">
-                <polygon id="Triangle-1" fill="#686868"
+                <polygon id="Triangle-1"
                     transform="translate(9.500000, 9.500000) rotate(-180.000000) translate(-9.500000, -9.500000) "
                     points="9.5 0 19 19 0 19 "></polygon>
             </svg>
@@ -74,7 +68,7 @@
         <h1>I'M LINDSAY,</h1>
 
         <p class="about_me">Student with a deep interest in computer programming and artificial intelligence. Certified
-            full stack web developer. Check out my
+            full-stack web developer. Check out my
 
             <a href="https://github.com/lindsayesterman" target="_blank">github</a>!
         </p><br>
@@ -96,8 +90,7 @@
 
             <li><a href="https://github.com/lindsayesterman" target="_blank"><img src="img/gh-icon.png"></a></li>
 
-            <li><a href="mailto:lindsayesterman@gmail.com"><img style="height:16px; margin-bottom:2px;"
-                        src="img/email-icon.png"></a></li>
+            <li><a href="mailto:lindsayesterman@gmail.com"><img src="img/email-icon.png"></a></li>
 
         </ol>
     </div>
