hello -> im lindsay

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
     <div class="container-intro">
 
         <div class="hello-intro">
-            <h2>HELLO</h2>
+            <h2>I'M LINDSAY</h2>
         </div>
 
         <ul>
 
             <li><a href="https://github.com/lindsayesterman" target="_blank" class="github">GITHUB</a></li>
 
-            <li><a href="#portfolio_page" class="portfolio">PORTFOLIO</a></li>
+            <li><a href="#portfolio" class="portfolio">PORTFOLIO</a></li>
 
         </ul>
 
@@ -46,7 +46,7 @@
 
 
 
-    <a data-scroll href="#portfolio_page">
+    <a data-scroll href="#portfolio">
         <div class="scroll_down">
             <svg id="arrow" width="19px" height="19px" version="1.1" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -59,13 +59,13 @@
 
 
 
-    <a id="portfolio_page"></a>
+    <a id="portfolio"></a>
 
     <main>
 
 
 
-        <h1>I'M LINDSAY,</h1>
+        <!-- <h1>Hi there,</h1> -->
 
         <p class="about_me">Student with a deep interest in computer programming and artificial intelligence. Certified
             full-stack web developer. Check out my
@@ -77,7 +77,7 @@
 
     </main>
 
-    <a id="left-off"></a>
+    <a id="projects"></a>
 
 
     <!-- Contact Links -->
