--- a/nasa.html
+++ b/nasa.html
@@ -20,7 +20,7 @@
 
 <body>
 
-    <a href="index.html#left-off"><img class="back-btn" type="image/png" src="img/back-btn.png" alt="back button"></a>
+    <a href="index.html#projects"><img class="back-btn" type="image/png" src="img/back-btn.png" alt="back button"></a>
 
     <div class="projects-iphone">
         <div class="nasa-flex">
