--- a/scrtime-saver.html
+++ b/scrtime-saver.html
@@ -22,7 +22,7 @@
 
 <body>
 
-    <a href="index.html#left-off"><img class="back-btn" type="image/png" src="img/back-btn.png" alt="back button"></a>
+    <a href="index.html#projects"><img class="back-btn" type="image/png" src="img/back-btn.png" alt="back button"></a>
 
 
     <div class="projects-iphone">
