--- a/team.html
+++ b/team.html
@@ -21,7 +21,7 @@
 
 <body>
 
-    <a href="index.html#left-off"><img class="back-btn" type="image/png" src="img/back-btn.png" alt="back button"></a>
+    <a href="index.html#projects"><img class="back-btn" type="image/png" src="img/back-btn.png" alt="back button"></a>
     <div class="projects-iphone">
         <img type="image/png" class="mini-proj" src="img/teammate-finder.png">
         <h1>Team'n Up</h1>
