--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
         <div class="dct">
             <a href="scrtime-saver.html">
-                <img src="img/scrtimeSnap.png" class="dct" alt="daily college tip logo">
+                <img src="img/scrtimeSnap.png" class="dct" alt="screentime saver">
                 <div>Screentime Saver</div>
             </a>
 
@@ -105,8 +105,8 @@
 
         <div class="dct">
             <a href="project-finder.html">
-                <img src="img/pf.png" class="dct" alt="daily college tip logo">
-                <div>Daily College Tip</div>
+                <img src="img/pf.png" class="dct" alt="project finder">
+                <div>Project Finder</div>
             </a>
 
         </div>
@@ -114,7 +114,7 @@
 
         <div class="dct">
             <a href="dct.html">
-                <img src="img/dct.png" class="dct" alt="daily college tip logo">
+                <img src="img/dct.png" class="dct" alt="daily college tip ">
                 <div>Daily College Tip</div>
             </a>
 
@@ -132,7 +132,7 @@
         <div class="nasa">
             <a href="nasa.html">
                 <img src="img/nadp.png"
-                    class="nasa" alt="code on computer screen">
+                    class="nasa" alt="space">
                 <div>Nasa Apod Digital Postcards</div>
             </a>
 
@@ -145,17 +145,6 @@
             </a>
 
         </div>
-
-        <!-- <div class="mini-projects">
-            <a href="projects.html">
-                <img src="https://cdn.pixabay.com/photo/2016/11/19/14/00/code-1839406_640.jpg" class="mini-projects"
-                    alt="brain">
-
-                <div>Mini Projects</div>
-            </a>
-
-        </div> -->
-
     </div>
 
 
