remove teamn up add esterman eye

--- a/index.html
+++ b/index.html
@@ -138,10 +138,19 @@
 
         </div>
 
-        <div class="dct">
+        <!-- <div class="dct">
             <a href="team.html">
                 <img src="img/tf.png" class="dct" alt="coding team">
                 <div>Team'n Up</div>
+            </a>
+
+        </div> -->
+
+
+        <div class="dct">
+            <a target="_blank" href="https://estermaneye-optical.vercel.app/">
+                <img src="img/estermanEye.png" class="dct" alt="esterman eye site">
+                <div>Esterman Eye Optical</div>
             </a>
 
         </div>
