--- a/dct.html
+++ b/dct.html
@@ -37,7 +37,7 @@
 				provides students looking for college counseling with daily, free, emailed college admissions tips.
 				Users subscribe on <a class="projects-links" href="http://www.dailycollegetip.com/"
 					target="_blank">dailycollegetip.com</a> and they then get tips sent straight to their inbox. Stack:
-				Sendgrid, MailChimp.</p><br><br>
+				HTML, CSS, Ruby, JavaScript, Sendgrid, MailChimp.</p><br><br>
 
 			<p>Check out the github repo <a class="projects-links"
 					href="https://github.com/lindsayesterman/college-tips" target="_blank">here</a>.<br><br></p>
