--- a/nasa.html
+++ b/nasa.html
@@ -34,7 +34,7 @@
 
                 I created this app for a few reasons. One being that 43% of people still send most of their mail digitally. I wanted to come up with an innovative and fun way to encourage people to partake in more digital messaging. It is a better use of time, money, and is less harmful towards the environment. The other reason I built this website is to encourage people to appreciate one another and still send thoughtful messages. Relationships are hard and a little thoughtfulness and appreciation goes a long way. <br><br>
 
-                Check out a few <a class="projects-links" href="https://lindsayesterman.github.io/nasa-apod/" target="_blank">Nasa apod</a> dates yourself. Stack: Nasa API<br>
+                Check out a few <a class="projects-links" href="https://lindsayesterman.github.io/nasa-apod/" target="_blank">Nasa apod</a> dates yourself. Stack: HTML, CSS, JavaScript, jQuery, Nasa API<br>
 
                 <br>Check out the github repo <a class="projects-links" href="https://github.com/lindsayesterman/nasa-apod" target="_blank">here</a>. <br><br></p>
 
