new esterman eye pic

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
         <div class="dct">
             <a target="_blank" href="https://estermaneye-optical.vercel.app/">
-                <img src="img/estermanEye.png" class="dct" alt="esterman eye site">
+                <img src="img/estermanEyeLanding.png" class="dct" alt="esterman eye site">
                 <div>Esterman Eye Optical</div>
             </a>
 
