--- a/project-finder.html
+++ b/project-finder.html
@@ -4,7 +4,7 @@
 
 <head>
 
-    <title>Daily College Tip</title>
+    <title>Project Finder</title>
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
